Fix empty cart button alignment at checkout

--- a/app/assets/stylesheets/store/openfoodweb.css.scss
+++ b/app/assets/stylesheets/store/openfoodweb.css.scss
@@ -165,6 +165,7 @@ ul.product-listing {
 }
 #empty-cart {
   float: left;
+  margin-top: 15px !important;
 
   p {
     padding: 0;
